src/main/java/com/example/stream/quarkus/registry/model/error/AddressServerError.java
package com.example.stream.quarkus.registry.model.error;

public record AddressServerError() implements AddressError {
}
